make sure dates don't cut off on right side

--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,8 @@ path.loess {
 }
 .headline-container {
   width: 50%;
-  background: #ffffff;
-  color: #222222;
+  background: #222222;
+  color: white;
   padding: 1em;
 }
 
